--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,16 @@
 .carou {
+  position: relative;
   width: 500px;
   height: 200px;
   overflow: hidden;
 }
 .carou img {
+  position: absolute;
   height: 100%;
   width: 100%;
+}
+.carou img:first-child {
+  left: -100%;
 }
 
 /*# sourceMappingURL=style.css.map */
