--- a/css/style.scss
+++ b/css/style.scss
@@ -1,9 +1,15 @@
 .carou {
+  position: relative;
   width: 500px;
   height: 200px;
   overflow: hidden;
   img {
+    position: absolute;
     height: 100%;
     width: 100%;
+    &:first-child{
+      left: -100%;
+    }
   }
+
 }
